[project]
name = "ml-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "mypy>=1.11.2",
    "pandas>=2.2.3",
    "pip>=24.2",
    "ruff>=0.6.7",
    "seaborn>=0.13.2",
    "setuptools>=75.1.0",
    "wandb>=0.18.1",
    "wheel>=0.44.0",
    "polars>=1.7.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
